src/app/css-styles/Header.module.css
.fixed_bar {
    position: fixed;
    background-color: #ff551a;
    height: 20px;
    width: 100%; /*adjusting right side of bar to match other elements*/
    top: 0;
    z-index: 10; /*keeps bar on top of other elements*/
}

.fixed_container {
    position: fixed;
    top: 10%;
    height: 100px;
    width: 100%;
    left: 0;

    z-index: 10;

}

.nbcu_logo {
    height: 15vw; /* responsive to viewport height */
    width: auto;
    margin-left: 4.5vw; /* responsive to viewport width */
}

.navbar_icon {
    position: absolute;
    right: 0px;
    top: 20px;
    width: 6.5vw; /* circle diameter */
    height: 6.5vw; /* circle diameter */
    border: 5px solid black; /* border */
    border-radius: 50%; /* circular border */
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin-right: 2vw;
}

.menu_line {
    height: .3vw; /* thickness */
    width: 55%; 
    background-color: black; 
    margin: 4px 0; /* spacing */
    border-radius: 5px;
    transition: width 0.3s ease; /* Smooth transition for width change */
}

.parallelogram_container {
    top:0;
    left:0;
}

.parallelogram_1, .parallelogram_2, .parallelogram_3, .parallelogram_4, .parallelogram_5 {
    position: fixed;
    display: block;
    height: 100px;
    width: 100%;
    transform: matrix(0.99999, -0.15837, 0, 1, 0, 0); 
    opacity: 1; 
    transform-origin: 50% 100% 0px;
    z-index: 8;
    background-color: #FC5A16;
}

.parallelogram_1 {
    top: 140px;
    background-color: #64CCED; /* overrides orange */
}

.parallelogram_2 {
    top: 245px;
}

.parallelogram_3 {
    top: 350px;
}  

.parallelogram_4 {
    top: 455px;
}  

.parallelogram_5 {
    top: 560px;
} 

.menu_container {
    position: relative;
    z-index: 9; /* Make sure this is higher than the parallelogram's z-index */
  }
  
.menu_item_1, .menu_item_2, .menu_item_3, .menu_item_4, .menu_item_5 {
    position: fixed;
    display: block;
    left: 50%;
    transform: translateX(-50%); /* Centers the text.  */
    color: #FFFFFF; /* Example text color */
    font-size: 1.8vw; /* Example font size */
}
  
.menu_item_1 {
    top: 180px; 
}
  
.menu_item_2 {
    top: 285px; 
}

.menu_item_3 {
    top: 390px; 
}

.menu_item_4 {
    top: 495px; 
}

.menu_item_5 {
    top: 600px;
}

@media (max-width: 1300px) {
    .navbar_icon {
        width: 7vw; /* circle diameter */
        height: 7vw; /* circle diameter */
        border: 4px solid black;
    }

    .menu_line {
        height: .4vw;
    }

    .parallelogram_1 {
        top: 100px;
    }
    
    .parallelogram_2 {
        top: 205px;
    }
    
    .parallelogram_3 {
        top: 310px;
    }  
    
    .parallelogram_4 {
        top: 415px;
    }  
    
    .parallelogram_5 {
        top: 520px;
    } 

    .menu_item_1 {
        top: 140px; 
      }
      
      .menu_item_2 {
        top: 245px; 
      }
      
      .menu_item_3 {
        top: 350px; 
      }
      
      .menu_item_4 {
        top: 455px; 
      }
      
      .menu_item_5 {
        top: 560px;
      }
}

@media (max-width: 1050px) {
    .menu_item_1, .menu_item_2, .menu_item_3, .menu_item_4, .menu_item_5 {
        font-size: 2.5vw; /* Example font size */
    }
}

@media (max-width: 800px) {
    .nbcu_logo {
        height: 20vw; /* Larger size for smaller screens */
    }

    .navbar_icon {
        height: 12vw;
        width: 12vw;
        border: 4px solid black;
    }

    .menu_item_1, .menu_item_2, .menu_item_3, .menu_item_4, .menu_item_5 {
        font-size: 3vw; /* Example font size */
    }

    
}

@media (max-width: 450px) {
    .nbcu_logo {
        height: 30vw; /* Larger size for smaller screens */
    }

    .navbar_icon {
        height: 12vw;
        width: 12vw;
        border: 3px solid black;
    }

    .menu_line {
        height: .5vw;
        margin: 3px;
    }
    .menu_item_1, .menu_item_2, .menu_item_3, .menu_item_4, .menu_item_5 {
        font-size: 4vw; /* Example font size */
    }
}

